# Helicopter-Combat

./: CMakeLists.txt  README.md  build.bat  build.ps1  test_combat.sh
src/: Enemy.cpp  Enemy.h  Environment.cpp  Environment.h  Game.cpp  Game.h  Helicopter.cpp  Helicopter.h  HelicopterCombat.cpp  HelicopterCombat.h  Mission.cpp  Mission.h  Weapon.cpp  Weapon.h  main.cpp
